--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 							</div>
 							<div class="text pl-3">
 								<span class="date">uncertain future</span>
-								<h2>Full Stack Developer</h2>
+								<h2>uncertain future</h2>
 								<span class="position">uncertain future</span>
 								<p>uncertain future<br /></p>
 								<b class="text-primary">기술 스택</b>
