--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<p>커피와 노트북만 있다면, 언제 어디서나 즐겁게 일하는 전현준입니다. </p>
+							<p>혁신 그 이상의 가치를 창출하고픈 저는 전현준입니다. </p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>전현준</span></li>
 								<li class="d-flex"><span>Address:</span> <span>청주시 흥덕구 복대동</span></li>
