--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 shadow">
 						<div class="text">
-							<strong class="number" data-number="365">0</strong>
+							<strong class="number" data-number="365+">0</strong>
 							<span>코딩한 일수</span>
 						</div>
 					</div>
@@ -445,7 +445,7 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							 <div class="text pl-3">
-								<span class="date">2019.09-2020.08</span>
+								<span class="date">uncertain future</span>
 								<div class="d-flex">
 									<h2>uncertain future</h2>
 									<!--<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
