--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Contact</h1>
 					<h2 class="mb-4">Contact Me</h2>
-					<p>회사와 함께 성장하는 개발자가 되겠습니다. 연락주세요.</p>
+					<p>급변하는 현대사회에서의 기술가치를 혁신적으로 바꾸는 개발자가 되겠습니다. </p>
 				</div>
 			</div>
 
