--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center">
 						<span class="subheading">Hey! I am</span>
-						<h1>전현준</h1>
+						<h1>Luciano</h1>
 						<h2>I'm a
 							<span class="txt-rotate" data-period="500"
 								data-rotate='[ "대학생"]'></span>
