--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<h1>Luciano</h1>
 						<h2>I'm a
 							<span class="txt-rotate" data-period="500"
-								data-rotate='[ "대학생"]'></span>
+								data-rotate='[ "Ai Research Engineer"]'></span>
 						</h2>
 					</div>
 				</div>
