--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Website</h3>
-							<p><a href="#">yoursite.com</a></p>
+							<p><a href="#">https://luciano-jeonhyunjun.github.io/CV/</a></p>
 						</div>
 					</div>
 				</div>
